# ADIS-16480-Interface

./: .gitignore  ADIS-Data-04-Jul-2014-17-55.txt  ADIS-velocity-11-jun-2014-17-29.txt  ADIS_START.sh  ADIS_interrupt_read.c  ADIS_interrupt_read.h  ADIS_write_to_registers.c  CMakeLists.txt  HR_data_out.c  HR_data_out.h  Makefile  README.markdown  README.md  ROS_start_in_progress.sh  copy_to_BBB_10-42-0-87.sh  copy_to_BBB_192-168-2-101.sh  copy_to_BBB_BRLNET.sh  data_from_BBB.sh  data_out.c  data_out.h  index.html  interrupt_detection.c  makefile  package.xml  params.json  reg_diag_sts.c  reg_diag_sts.h  reg_ekf_cnfg.c  reg_ekf_cnfg.h  reg_glob_cmd.c  reg_glob_cmd.h  reg_sys_e_flag.c  reg_sys_e_flag.h  rt_clock.h  spi_ADIS_16480.c  spi_ADIS_16480.h  wrapper_C_library_callback_to_Cpp.c  wrapper_C_library_callback_to_Cpp.h
adis_16480_driver/: CMakeLists.txt
adis_16480_driver/include/adis_16480_driver/: driver_services.h
adis_16480_driver/src/: drivers_services.cpp
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
devel/include/adis_16480_driver/: Acceleration.h  HR_YPR_lACC.h  HR_YPR_lVEL.h  LR_YPR.h  Quaternion.h  Velocity.h  YPR.h  doEKFReset.h  doEKFResetRequest.h  doEKFResetResponse.h  doSoftReset.h  doSoftResetRequest.h  doSoftResetResponse.h  doTare.h  doTareRequest.h  doTareResponse.h  pause.h  pauseRequest.h  pauseResponse.h  setDecRate.h  setDecRateRequest.h  setDecRateResponse.h  setFilterCoeffs.h  setFilterCoeffsRequest.h  setFilterCoeffsResponse.h  startstopFilter.h  startstopFilterRequest.h  startstopFilterResponse.h  switchDataOutMode.h  switchDataOutModeRequest.h  switchDataOutModeResponse.h  switchFrame.h  switchFrameRequest.h  switchFrameResponse.h
devel/share/adis_16480_driver/cmake/: adis_16480_driver-msg-extras.cmake  adis_16480_driver-msg-paths.cmake  adis_16480_driverConfig.cmake
devel/share/common-lisp/ros/adis_16480_driver/msg/: Acceleration.lisp  HR_YPR_lACC.lisp  HR_YPR_lVEL.lisp  LR_YPR.lisp  Quaternion.lisp  Velocity.lisp  YPR.lisp  _package.lisp  _package_HR_YPR_lACC.lisp  _package_HR_YPR_lVEL.lisp  _package_LR_YPR.lisp  _package_Quaternion.lisp  _package_Velocity.lisp  _package_YPR.lisp  adis_16480_driver-msg.asd
devel/share/common-lisp/ros/adis_16480_driver/srv/: _package.lisp  _package_doSoftReset.lisp  _package_doTare.lisp  _package_setDecRate.lisp  _package_setFilterCoeffs.lisp  _package_startstopFilter.lisp  _package_switchDataOutMode.lisp  _package_switchFrame.lisp  adis_16480_driver-srv.asd  doEKFReset.lisp  doSoftReset.lisp  doTare.lisp  pause.lisp  setDecRate.lisp  setFilterCoeffs.lisp  startstopFilter.lisp  switchDataOutMode.lisp  switchFrame.lisp
include/adis_16480_driver/: ADIS_interrupt_read.h  HR_data_out.h  driver_services.h  fir_filter_bank.h  interrupt_detection.h  reg_diag_sts.h  reg_ekf_cnfg.h  spi_ADIS_16480.h
msg/: HR_YPR_lACC.msg  LR_YPR.msg  Velocity.msg
src/: ADIS_interrupt_read.cpp  ADIS_write_to_registers.cpp  HR_data_out.cpp  data_out.cpp  driver.cpp  drivers_services.cpp  fir_filter_bank.cpp  interrupt_detection.cpp  reg_diag_sts.cpp  reg_ekf_cnfg.cpp  reg_glob_cmd.cpp  reg_sys_e_flag.cpp  spi_ADIS_16480.cpp  wrapper_C_library_callback_to_Cpp.cpp
src/adis_16480_driver/: CMakeLists.txt  package.xml
src/adis_16480_driver/include/adis_16480_driver/: ADIS_interrupt_read.h  reg_glob_cmd.h  spi_ADIS_16480.h  wrapper_C_library_callback_to_Cpp.h
src/adis_16480_driver/msg/: HR_YPR_lVEL.msg
src/adis_16480_driver/src/: ADIS_interrupt_read.cpp  ADIS_write_to_registers.cpp  driver.cpp  drivers_services.cpp  interrupt_detection.cpp  reg_glob_cmd.cpp
src/adis_16480_driver/srv/: doEKFReset.srv  doTare.srv  setDecRate.srv  switchFrame.srv
srv/: SetDecRate.srv  SetFilterCoeffs.srv  SwitchDataOutMode.srv  doSoftReset.srv  doTare.srv  pause.srv  setFilterCoeffs.srv  startstopFilter.srv  switchDataOutMode.srv  switchFrame.srv
